# lexguard-bot

./: .env  .env.example  .gitignore  .replit  README.md  Snippets_Importing_libraries.ipynb  app.py  main 4.py  main.py  pyproject.toml  requirements.txt  todo_app.py
.github/workflows/: Untitled-1.py  codeql.yml
pdf/: generator.py
web/: app.py
web/pdf/security/: rsa_signing.py
