[project]
name = "lexguard-aml"
version = "5.2.0"
description = "Premium AML Wallet Screening & Compliance Bot"
authors = ["LexGuard Team <support@lexguard.io>"]
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "python-telegram-bot>=20.0",
    "telegram>=0.0.1",
    "reportlab>=4.0.0"
]